fix: improve dark theme contrast for list markers and underlines

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -158,7 +158,7 @@ li {
     padding-top: 4px;
 
     &:before {
-        color: $black;
+        color: $text-base-color; // Use text color for visibility on dark background
     }
 
     > ul,
@@ -271,7 +271,7 @@ blockquote {
 
 // Underline
 u {
-    text-decoration-color: #d2c7c7;
+    text-decoration-color: $light; // Use variable for consistency
 }
 
 // Small
